# Rcli_fea

./: .pre-commit-config.yaml  Cargo.toml  deny.toml
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs  text.rs
