[package]
name = "rcli_fea"
version = "0.1.0"
authors = ["Kaindy Liu <kaindy7633@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
cargo-deny = "0.16.3"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tempdir = "0.3.7"
tempfile = "3.14.0"
toml = "0.8.19"
